[tool.poetry]
authors = []
description = ""
name = "poetrybase"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10,<3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
pyinstaller = "^5.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
