[tool.poetry]
authors = []
description = ""
name = "poetrybase"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10,<3.11"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
