[tool.poetry]
authors = []
description = ""
name = "poetrybase"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12,<3.13"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
pytest = "^8.3.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
